--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
       "url": "heroku/python"
     }
   ],
-  "repository": "https://github.com/GANJAKHOR001/AI_2",
+  "repository": "https://github.com/GANJAKHOR001/OLIVE_CHAI_AI",
   "env": {
     "API_ID": {
       "description": "Get this value from my.telegram.org/apps.",
